--- a/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
+++ b/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d75b54c3-c1d7-4f93-be35-2da7e42a86f1",
    "metadata": {
     "tags": []
@@ -146,7 +146,7 @@
    "source": [
     "dataset = let\n",
     "\n",
-    "    # initialize -\n",
+    "    # initialize - This is a change made by Sid\n",
     "    dataset = Dict{String, DataFrame}();\n",
     "\n",
     "    # iterate through the dictionary; we can't guarantee a particular order\n",
