--- a/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
+++ b/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
@@ -347,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "db607c55",
    "metadata": {},
    "outputs": [],
    "source": [
     "CM = let\n",
     "\n",
-    "    # initialize -\n",
+    "    # initialize - This is a change made by Sid on 10/30\n",
     "    number_of_tickers = length(list_of_tickers);\n",
     "    correlation_matrix = Array{Float64,2}(undef, number_of_tickers, number_of_tickers);\n",
     "    σ²ₘ = Varₘ; # market variance\n",
